added a detail view controller to hold reminders.  added map annotations.  added CoreLocation service.

--- a/method-of-loci/method-of-loci/Info.plist
+++ b/method-of-loci/method-of-loci/Info.plist
@@ -51,6 +51,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app will use location services when the app is in use.  App functionality will be limited when location services are turned off.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
